..F....... [ZBXNEXT-2102] added placeholder on empty dashboard (vmurzins)
A.FG...PS. [ZBXNEXT-3006] implemented support of bulk metric collection for dependent items data population (gcalenko, vjaceslavs, wiper)
....I..... [ZBXNEXT-3725] updated templates for network devices to new version (internal version 0.10beta)

Bug fixes:
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
A.F....... [ZBXNEXT-2102] fixed several issues in dashboard (Ivo, miks, Sasha, vmurzins)
..F....... [ZBXNEXT-2102] fixed copying sharing properties when cloning dashboard (vmurzins)
........S. [ZBXNEXT-18] fixed unnecessary notification sending a recovery message (Sergejs)
........S. [ZBXNEXT-18] fixed acknowledge notification sending in maintenance period (Sergejs)
........S. [ZBX-12339] fixed item history and trends flags update during configuration cache synchornization (wiper)
..F....... [ZBXNEXT-18] fixed php5.4 incompatibility in events page and acknowledge operation form (gcalenko)
..F....... [ZBXNEXT-18] fixed script name select button for new acknowledge operation form and recovery operation form (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.0alpha2

New features:
..F....... [ZBXNEXT-2102] added blinking for recent problems in Problems widget (Sasha)
..F....... [ZBXNEXT-2102] implemented additional filters for dashboard widgets (Sasha)
A.F....... [ZBXNEXT-1076] implemented new permission schema to allow view map when no permissions to all map elements (miks)
A.F.....S. [ZBXNEXT-18] implemented sending alerts on acknowledges (Sergejs)
...G...... [ZBXNEXT-3910] added support to the agent for monitoring processes in trace or uninterruptible state on Linux, FreeBSD, OpenBSD and NetBSD (abs)
........S. [ZBX-12258] added bulk selections to improve performance in processing of escalations (Sergejs)

Bug fixes:
..F....... [ZBXNEXT-2102] fixed multiple issues in Map widget (miks)