@@ -1353,18 +1353,40 @@ if test "x$server" = "xyes" || test "x$proxy" = "xyes"; then
 	AC_SUBST(OPENIPMI_CFLAGS)
 fi
 
-dnl Check for libevent, used by Zabbix IPC services
-LIBEVENT_CHECK_CONFIG([no])
-if test "x$found_libevent" != "xyes"; then
-        AC_MSG_ERROR([Unable to use libevent (libevent check failed)])
+dnl Check if Zabbix internal IPC services are used
+have_ipcservice="no"
+if test "x$have_ipmi" = "xyes"; then
+	have_ipcservice="yes"
+	proxy_libevent="yes"
+	server_libevent="yes"
 fi
-SERVER_LDFLAGS="$SERVER_LDFLAGS $LIBEVENT_LDFLAGS"
-SERVER_LIBS="$SERVER_LIBS $LIBEVENT_LIBS"
 
-PROXY_LDFLAGS="$PROXY_LDFLAGS $LIBEVENT_LDFLAGS"
-PROXY_LIBS="$PROXY_LIBS $LIBEVENT_LIBS"
+if test "x$server" = "xyes"; then
+	have_ipcservice="yes"
+	server_libevent="yes"
+fi
 
-AC_SUBST(LIBEVENET_CFLAGS)
+dnl Check for libevent, used by Zabbix IPC services
+if test "x$have_ipcservice" = "xyes"; then
+	AC_DEFINE([HAVE_IPCSERVICE], 1, [Define to 1 if Zabbix IPC services are used])
+
+	LIBEVENT_CHECK_CONFIG([no])
+	if test "x$found_libevent" != "xyes"; then
+		AC_MSG_ERROR([Unable to use libevent (libevent check failed)])
+	fi
+	
+	if test "x$server_libevent" = "xyes"; then
+		SERVER_LDFLAGS="$SERVER_LDFLAGS $LIBEVENT_LDFLAGS"
+		SERVER_LIBS="$SERVER_LIBS $LIBEVENT_LIBS"
+	fi
+
+	if test "x$proxy_libevent" = "xyes"; then
+		PROXY_LDFLAGS="$PROXY_LDFLAGS $LIBEVENT_LDFLAGS"
+		PROXY_LIBS="$PROXY_LIBS $LIBEVENT_LIBS"
+	fi
+
+	AC_SUBST(LIBEVENET_CFLAGS)
+fi
 
 dnl Check for libpcre, used by Zabbix for regular expressions
 LIBPCRE_CHECK_CONFIG([no])
