@@ -1,4 +1,7 @@
 #include "common.h"
+
+#ifdef HAVE_IPCSERVICE
+
 #include "zbxtypes.h"
 #include "zbxalgo.h"
 #include "log.h"
@@ -1268,7 +1271,6 @@ void	zbx_ipc_message_init(zbx_ipc_message_t *message)
 	memset(message, 0, sizeof(zbx_ipc_message_t));
 }
 
-
 /******************************************************************************
  *                                                                            *
  * Function: zbx_ipc_message_format                                           *
@@ -1703,3 +1705,4 @@ int	zbx_ipc_client_connected(zbx_ipc_client_t *client)
 	return (NULL == client->rx_event ? FAIL : SUCCEED);
 }
 
+#endif
